--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.14",
+    "expo-camera": "~15.0.11",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-screens": "3.31.1",
     "react-native-safe-area-context": "4.10.1",
-    "expo-camera": "~15.0.11",
-    "expo-location": "~17.0.1"
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
