--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-camera": "~15.0.11",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-safe-area-context": "4.10.1",
